optimization:Fixed the stretch of table without data and the card of the default cloud region

--- a/src/app/node-manager/(pages)/cloudregion/node/index.module.scss
+++ b/src/app/node-manager/(pages)/cloudregion/node/index.module.scss
@@ -14,7 +14,11 @@
          height: 100%;
          } 
         } 
-      
+    
+        .tablewidth{
+         max-width: calc(100vw - 288px);
+         min-width: 1000px;
+        }
    }
 }
 
